--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+  }
+
 body {
     background-color: #222234;
     color: white;
@@ -12,6 +16,9 @@ body {
 }
 
 @media screen and (max-width: 750px) {
+    html, body {
+        overflow-x: hidden;
+        }
 }
 
 /* 
