--- a/src/assets/css/aboutMe.css
+++ b/src/assets/css/aboutMe.css
@@ -1,27 +1,31 @@
 .sobreMi h2{
-   text-align: center;
-   margin-top: 2.5%;
-   font-size: 2.5em;
-   letter-spacing: 0em;
-   font-weight: bold;
-}
-
-.info p{
-    margin-top: 2%;
-    margin-left: 20%;
-    margin-right: 20%;
-    font-size: 1.2em;
     text-align: center;
-}
-
-@media screen and (max-width: 750px) {
-    .sobreMi h2{
-        margin-top: 10%;
+    margin-top: 2.5%;
+    font-size: 2.5em;
+    letter-spacing: 0em;
+    font-weight: bold;
+ }
+ 
+ .info p{
+     margin-top: 2%;
+     margin-left: 20%;
+     margin-right: 20%;
+     font-size: 1.2em;
+     text-align: center;
+ 
+     background-color: #37374d;
+     padding: 3%;
+     border-radius: 20px
+ }
+ 
+ @media screen and (max-width: 750px) {
+     .sobreMi h2{
+         margin-top: 10%;
+      }
+ 
+      .info{
+         margin-top: 8%;
+         margin-left: -25%;
+         margin-right: -25%;
      }
-
-     .info{
-        margin-top: 8%;
-        margin-left: -20%;
-        margin-right: -20%;
-    }
-}
+ }
