--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -1,34 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+
 .background {
     width: 100vw;
     height: 100vh;
     background-image: url("../img/background.gif");
     background-size: cover;
-    z-index: -1
+    z-index: -1;
 }
 
 .titulo {
     top: 4vh;
     position: relative;
     font-size: 13vh;
-}
-
-.typewriter {
-    width: fit-content;
-    margin: 0 auto;
-    top: 7vh;
-    font-size: 3vh;
-    font-weight: bold;
-    position: relative;
-
-    overflow: hidden;
-    border-right: .15em solid orange;
-    white-space: nowrap;
-    animation:
-        typing 5s steps(100, end),
-        blink-caret .75s step-end infinite;
+    font-family: 'Quicksand', sans-serif;
 }
 
 .imgPerfil {
+    display: block;
+    margin: 0 auto;
     margin-top: 150px;
     opacity: 1;
     height: 20%;
@@ -38,26 +28,36 @@
     background-color: #171724;
 }
 
+.typewriterContainer{
+    display: inline-block;
+    margin-top: 7vh;
+}
 
-@media screen and (max-width: 750px) {
-    .titulo {
-        font-size: 8vh;
-        top: 6vh;
-        position: relative;
-    }
+.typewriter{
+    width: max-content;
+    font-size: 3vh;
+    font-weight: bold;
+    border-right: 3px solid transparent;  
+    white-space: nowrap;
+    animation: 
+    typing 2s steps(23, end) forwards,
+    blink-caret 0.5s infinite alternate;
+    overflow: hidden;
+    font-family: 'Lato', sans-serif;
+}
 
-    .typewriter {
-        top: 18vh;
-        font-size: 2.3vh;
-        animation:
-            typing 2s steps(50, end),
-            blink-caret .75s step-end infinite;
-    }
-
-    .imgPerfil {
-        height: 20%;
-        width: 45%;
-    }
+.typewriter2{
+    width: 0;
+    font-size: 3vh;
+    font-weight: bold;
+    border-right: 3px solid transparent;  
+    white-space: nowrap;
+    animation: 
+    typing 2s steps(27, end) forwards,
+    blink-caret 0.5s infinite alternate;
+    animation-delay: 2s;
+    overflow: hidden;
+    font-family: 'Lato', sans-serif;
 }
 
 @keyframes typing {
@@ -72,12 +72,19 @@
 
 @keyframes blink-caret {
 
-    from,
-    to {
-        border-color: transparent
+    from { border-color: transparent }
+    to { border-color: #5a5ac2; }
+}
+
+@media screen and (max-width: 750px) {
+    .titulo {
+        font-size: 8vh;
+        top: 6vh;
+        position: relative;
     }
 
-    50% {
-        border-color: orange;
+    .imgPerfil {
+        height: 20%;
+        width: 45%;
     }
 }
