--- a/src/assets/css/proyects.css
+++ b/src/assets/css/proyects.css
@@ -22,6 +22,12 @@
 @media screen and (max-width: 750px) {
      .carrousel{
         width:95%;
+        padding-top: 2%;
         height:auto;
+    }
+
+    .containerProyects{
+        padding-top: .5%;
+        padding-bottom: 4.5%;
     }
 }
