--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,7 +1,3 @@
-html {
-    scroll-behavior: smooth;
-  }
-
 body {
     background-color: #222234;
     color: white;
@@ -11,23 +7,48 @@ body {
     width: 100%;
     object-fit: contain;
     letter-spacing: .15em;
-    font-family: Arial, Helvetica, sans-serif
+    font-family: Arial, Helvetica, sans-serif;
+    scroll-behavior: smooth;
+}
 
+.scrollTop {
+    left: 85%;
+    margin-bottom: 1%;
+    position: fixed;
+    bottom: 20px;
+    align-items: center;
+    height: 20px;
+    justify-content: end;
+    z-index: 1000;
+    cursor: pointer;
+    animation: fadeIn 0.3s;
+    transition: opacity 0.4s;
+    opacity: 0.5;
+}
+
+.scrollTop:hover {
+    color: #e91f63;
+    opacity: 1;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 0.5;
+    }
 }
 
 @media screen and (max-width: 750px) {
-    html, body {
-        overflow-x: hidden;
-        }
-}
 
-/* 
-height: 100vh;
-width: 100%;
-object-fit: contain;
-box-shadow: inset 0 0 0 1000px rgb(0 0 0 / 60%);
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-margin: 0 auto; */
+    html,
+    body {
+        overflow-x: hidden;
+    }
+
+    .scrollTop {
+        margin-bottom: 8%;
+    }
+}
