--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -42,9 +42,7 @@ body {
 }
 
 @media screen and (max-width: 750px) {
-
-    html,
-    body {
+    .containerApp {
         overflow-x: hidden;
     }
 
