--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
 
 /* index.css */
 
@@ -18,4 +18,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+/* Aplicar fuente Poppins globalmente o donde se necesite */
+.font-poppins {
+  font-family: 'Poppins', sans-serif;
 }
